Revision history for POE-Quickie

{{$NEXT}}

0.11  Thu Sep 2 21:11:57 GMT 2010
    - Change the API a bit to make it more of a singleton

0.10  Tue Aug 17 22:55:26 GMT 2010
    - Make all warnings fatal

0.09  Mon Aug 2 09:42:54 GMT 2010
    - We were shutting down stdin too soon. Fixed and added a test for it.

0.08  Mon Aug 2 09:19:37 GMT 2010
    - Add an 'Input' parameter to run() for writing to the program's stdin

0.07  Sat Jul 3 04:20:02 GMT 2010
    - Enable CloseOnCall on non-Win32 only instead of on Win32 only.
    - Make sure the testing dependencies go into build_requires

0.06  Mon Jun 28 19:29:56 GMT 2010
    - Improve docs in a few places
    - Allow specifying a signal to killall()

0.05  Sat Jun 26 02:02:56 GMT 2010
    - Made 06_lazy.t a little less strict

0.04  Thu Jun 24 11:09:18 GMT 2010
    - Recreate our POE session in case it had run out of work and died

0.03  Thu Jun 24 01:33:27 GMT 2010
    - Fix a bug in the SYNOPSIS and improved the docs elsewhere as well

0.02  Thu Jun 24 01:21:17 GMT 2010
    - Renamed CopyINC to AltFork (like POE::Component::Generic and other
      modules call this feature) and made it croak if used on Win32
    - Make sure we have reaped the child process before we emit ExitEvent
    - Added an Capture::Tiny-like interface which "blocks" (while running
      other POE code) while executing programs
    - Replaced the shutdown() method with killall()

0.01  Wed Jun 23 13:30:10 GMT 2010
    - Initial release